--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -86,6 +86,8 @@
 </script>
  {% endif %}
  {% if page.title == 'Home' %}
+ <meta name="keywords" content="Ionic, Español, Comunidad, Google Maps, PWA">
+  <meta name="description" content="Somos un pequeño pedazo del Internet empoderado por la Comunidad de Ionic en Español. Aprende a crear apps con HTML, CSS y Javascript con nuestros Tutoriales, Libro, Slack y Publicaciones.">
  <script type="application/ld+json">
 {
   "@context": "http://schema.org",
