--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -143,4 +143,6 @@
 {% endif%}
 <script async custom-element="amp-install-serviceworker"
   src="https://cdn.ampproject.org/v0/amp-install-serviceworker-0.1.js"></script>
+<script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
 </head>
+
