:lipstick: aurthors add border-radius in avatar

--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -10,7 +10,7 @@ layout: default
       <div class="author">
         <div class="row wrap center">
           <div class="col col-100 col-md-20 col-lg-20">
-            <amp-img src="{{ author.avatar }}" alt="{{ author.name }}" width="800" height="800" layout="responsive"></amp-img>
+            <amp-img class="avatar-profile" src="{{ author.avatar }}" alt="{{ author.name }}" width="800" height="800" layout="responsive"></amp-img>
           </div>
           <div class="col col-100 col-md-67 col-lg-67 text">
             <h2>{{ author.name }}</h2>
