--- a/_sass/blog/_authors.scss
+++ b/_sass/blog/_authors.scss
@@ -8,6 +8,9 @@
     margin-top: 5px;
     margin-bottom: 0px;
   }
+  .avatar-profile{
+    border-radius: 100%;
+  }
   .text{
     box-sizing: border-box;
     padding-left: 2%;
