--- a/_layouts/authors.html
+++ b/_layouts/authors.html
@@ -19,7 +19,7 @@ layout: default
       <div class="author">
         <div class="row wrap center">
           <div class="col col-100 col-md-20 col-lg-20">
-            <amp-img src="{{ author.avatar }}" alt="{{ author.name }}" width="800" height="800" layout="responsive"></amp-img>
+            <amp-img class="avatar-profile" src="{{ author.avatar }}" alt="{{ author.name }}" width="800" height="800" layout="responsive"></amp-img>
           </div>
           <div class="col col-100 col-md-80 col-lg-80 text">
             <h2>{{ author.name }}</h2>
