--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html amp lang="en">{% include general/head.html %}
   <body>
+    {% include general/gtm.html %}
     {% if page.layout != 'post' %}{% include general/share-vertical.html %}{% endif %}
     {% include general/sidebar.html %}
     {{ content }}
