--- a/_layouts/meetups.html
+++ b/_layouts/meetups.html
@@ -8,6 +8,13 @@ layout: default
       <h1 class="title-page">Encuentrate con la Comunidad.</h1>
     </div>
   </div>
+  <div class="row">
+    <div class="col">
+      <p>Los <b>Cross Apps Groups (C.A.G)</b> son para desarrolladores quienes estan interesados en Crear Apps Móviles utilizando Javascript; Todo desde <a href="http://ionicframework.com/" target="_blank">Ionic</a>, <a href="https://www.nativescript.org/" target="_blank">NativeScript</a>, <a href="https://phonegap.com/" target="_blank">Phonegap</a> y <a href="https://electron.atom.io/" target="_blank">Electron</a>, hasta integraciones de APIS, Firebase y otros BaaS.<br/><br/>
+      ¿ Quieres comenzar un Meetup en tu Ciudad ? <a href="https://docs.google.com/document/d/1sStgaG_w_0-rn9wAHpppCxEp_rLWVqCJnqbzZ43p9FU/edit?usp=sharing" target="_blank">Lee esto</a>.  
+      </p>
+    </div>
+  </div>
   <div class="row wrap top">
     <div class="col col-100 col-md-80 col-lg-80 content-authors">
       {% for meetups in site.data.meetups %}
