--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -13,7 +13,8 @@ layout: default
             <amp-img class="avatar-profile" src="{{ author.avatar }}" alt="{{ author.name }}" width="800" height="800" layout="responsive"></amp-img>
           </div>
           <div class="col col-100 col-md-67 col-lg-67 text">
-            <h2>{{ author.name }}</h2>
+            <h2 class="author-name">{{ author.name }}</h2>
+            <h3 class="author-country">{{ author.country }}</h3>
             <div class="info"><p>{{ author.bio }}</p></div>
             {% if author.website %}
             <p><strong>Website:</strong> <a href="{{ author.website }}" target="_blank"> {{ author.website }}</a></p>
