--- a/_layouts/authors.html
+++ b/_layouts/authors.html
@@ -8,15 +8,11 @@ layout: default
       <h1 class="title-page">Autores</h1>
     </div>
   </div>
-  <div class="row">
-    <div class="col">
+  <div class="row wrap top">
+    <div class="col col-100 col-md-80 col-lg-80 content-authors">
       <p>Estos increibles tutoriales, tips y demos se logran gracias a nuestros increibles miembros de la comunidad. <br/><br/>
       Revisa que nos motiva <a href="http://bit.ly/2o4ekwi" target="_blank">aquí.</a><br/><br/>
       ¿Quieres escribir un articulo ? Envia un <a href="http://bit.ly/2qX3Xrr" target="_blank">Pull Request.</a></p>
-    </div>
-  </div>
-  <div class="row wrap top">
-    <div class="col col-100 col-md-80 col-lg-80 content-authors">
       {% for author in site.data.authors %}
       <div class="author">
         <div class="row wrap center">
@@ -24,8 +20,8 @@ layout: default
             <amp-img class="avatar-profile" src="{{ author.avatar }}" alt="{{ author.name }}" width="800" height="800" layout="responsive"></amp-img>
           </div>
           <div class="col col-100 col-md-80 col-lg-80 text">
-            <h2>{{ author.name }}</h2>
-            <h3>{{ author.country }}</h3>
+            <h2 class="author-name">{{ author.name }}</h2>
+            <h3 class="author-country">{{ author.country }}</h3>
             <div class="info"><p>{{ author.bio | strip_html | truncate: 200  }}...</p></div>
             {% assign posts = site.posts | where:"draft", "false" | where:"author", author.id %}
             <div class="more">
