--- a/_includes/general/footer.html
+++ b/_includes/general/footer.html
@@ -25,9 +25,11 @@
     </div>
   </footer>
 </div>
+{% if site.pwa_enabled > 0 %}
 <!-- Install Service Worker -->
 <amp-install-serviceworker src="/sw.js"
   data-iframe-src="https://www.ion-book.com/sw.html"
   layout="nodisplay"
   >
 </amp-install-serviceworker>
+{% endif%}
