--- a/_includes/blog/right.html
+++ b/_includes/blog/right.html
@@ -26,3 +26,19 @@
   </div>
 </div>
 
+<div class="content-slack-right">
+  <div class="row">
+    <div class="col col-100 offset-md-25 col-md-50 offset-lg-25 col-lg-50">
+        <div class="banner-slack" >
+      <div class="row wrap center">
+          <h3>Activa las notificaciones!!!</h3>
+          <p>No te pierdas ninguno de nuestros articulos, ionhangouts o información. Activando nuestras notificaciones.</p>
+           <a onclick="_pcq.push(['triggerOptIn']);" class="btn btn-primary btn-round btn-join">
+            Obtén Superpoderes
+            </a>
+      </div>
+    </div>
+    </div>
+  </div>
+</div>
+
