--- a/_includes/home/header.html
+++ b/_includes/home/header.html
@@ -5,7 +5,7 @@
       <div class="col col-100 col-md-60 col-lg-60">
         <h1 class="title">{{ site.data.home.banner_title  }}</h1>
         <p class="text">{{ site.data.home.banner_text  }}</p>
-        {% include general/subscribe.html %}
+        {% include general/subscribe2.html %}
       </div>
       <div class="col col-100 col-md-40 col-lg-40">
         <div class="phones">
