--- a/_includes/general/js.html
+++ b/_includes/general/js.html
@@ -1,4 +1,4 @@
-<!--
+{% if page.title != 'Home' %}
 <amp-analytics type="googleanalytics" id="analytics-ga">
 <script type="application/json">
 {
@@ -14,4 +14,4 @@
 }
 </script>
 </amp-analytics>
--->
+{% endif%}
