--- a/_includes/home/header.html
+++ b/_includes/home/header.html
@@ -5,11 +5,11 @@
       <div class="col col-100 col-md-60 col-lg-60">
         <h1 class="title">{{ site.data.home.banner_title  }}</h1>
         <p class="text">{{ site.data.home.banner_text  }}</p>
-        {% include general/subscribe2.html %}
+        {% include general/subscribe.html %}
       </div>
       <div class="col col-100 col-md-40 col-lg-40">
         <div class="phones">
-          <amp-img src="{{ '/images/phones.png'  | prepend: site.baseurl }}"  width="800" height="890" layout="responsive"></amp-img>
+          <amp-img src="{{ '/images/phones2.png'  | prepend: site.baseurl }}"  width="890" height="716" layout="responsive"></amp-img>
         </div>
       </div>
     </div>
