--- a/_includes/home/slack.html
+++ b/_includes/home/slack.html
@@ -1,4 +1,10 @@
 <div class="content content-slack">
+  <div class="row">
+    <div class="col">
+     <h2 class="title">Aprende en Comunidad.</h2>
+     <p class="text-center">Conectate con la comunidad y llega al siguiente nivel con ellos.</p>
+    </div>
+  </div>
   <div class="row wrap">
     <div class="col col-100 col-md-100 col-lg-50">
       {% include general/banner-slack.html %}
