--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -54,7 +54,7 @@ layout: default
         {% if page.remember %}
         <div class="remember-demo">
           <h4><strong>Recuerda:</strong></h4>
-          <p>Si quieres ejecutar este demo un tu computadora, debes tener el <a target="_blank" href="http://ionicframework.com/docs/v2/getting-started/installation/">entorno</a> de ionic instalado y luego de descargar o clonar el proyecto debes ubicarte en tu proyecto en la terminal y luego ejecutar</p>
+          <p>Si quieres ejecutar este demo en tu computadora, debes tener el <a target="_blank" href="http://ionicframework.com/docs/v2/getting-started/installation/">entorno</a> de ionic instalado y luego de descargar o clonar el proyecto debes ubicarte en tu proyecto en la terminal y luego ejecutar</p>
           <div class="highlighter-rouge">
             <pre class="highlight"><code>npm install</code></pre>
           </div>
