Updating Service Worker

--- a/_includes/general/footer.html
+++ b/_includes/general/footer.html
@@ -27,8 +27,8 @@
 </div>
 {% if site.pwa_enabled > 0 %}
 <!-- Install Service Worker -->
-<amp-install-serviceworker src="/sw.js"
-  data-iframe-src="https://www.ion-book.com/sw.html"
+<amp-install-serviceworker src="./sw.js"
+  data-iframe-src="./sw.html"
   layout="nodisplay"
   >
 </amp-install-serviceworker>
