--- a/_includes/general/subscribe.html
+++ b/_includes/general/subscribe.html
@@ -1,5 +1,5 @@
 <div class="ion-form-subscribe">
-  <a href="https://www.ion-book.com/blog/" target="_blank" class="btn btn-round btn-success">Ir al Blog</a>
+  <a href="https://blog.ng-classroom.com/blog/" target="_blank" class="btn btn-round btn-success">Ir al Blog</a>
 </div>
 
 
