--- a/_layouts/organizers.html
+++ b/_layouts/organizers.html
@@ -10,22 +10,24 @@ layout: default
   </div>
   <div class="row wrap top">
     <div class="col col-100 col-md-80 col-lg-80 content-authors">
-      <p>Estos increibles tutoriales, tips y demos se logran gracias a nuestros increibles miembros de la comunidad. <br/><br/>
-      Revisa que nos motiva <a href="http://bit.ly/2o4ekwi" target="_blank">aquí.</a><br/><br/></p>
-      {% for author in site.data.authors %}
+      <p>Esto son los organizadores de los Cross Apps Groups (C.A.G) un espacio para compartir conocimiento quienes estan interesados en Crear Apps Móviles utilizando Javascript; Todo desde Ionic, NativeScript, Phonegap y Electron, hasta integraciones de APIS, Firebase y otros BaaS.<br/><br/>
+      Contacta a tu organizador mas cercano :)
+      </p>
+      {% for organizer in site.data.organizers %}
       <div class="author">
         <div class="row wrap center">
           <div class="col col-100 col-md-20 col-lg-20">
-            <amp-img class="avatar-profile" src="{{ author.avatar }}" alt="{{ author.name }}" width="800" height="800" layout="responsive"></amp-img>
+            <amp-img class="avatar-profile" src="{{ organizer.avatar }}" alt="{{ organizer.name }}" width="800" height="800" layout="responsive"></amp-img>
           </div>
           <div class="col col-100 col-md-80 col-lg-80 text">
-            <h2 class="author-name">{{ author.name }}</h2>
-            <h3 class="author-country">{{ author.country }}</h3>
-            <div class="info"><p>{{ author.bio | strip_html | truncate: 200  }}...</p></div>
-            {% assign posts = site.posts | where:"draft", "false" | where:"author", author.id %}
+            <h2 class="author-name">{{ organizer.name }}</h2>
+            <h3 class="author-country">{{ organizer.country }}</h3>
+            <div class="info"><p>{{ organizer.bio | strip_html | truncate: 200  }}...</p></div>
+            {% for meetup in organizer.meetups %}  
             <div class="more">
-              <a class="btn btn-primary btn-round" href="{{ author.url }}">Ver artículos ({{ posts | size }})</a>
+              <a class="btn btn-primary btn-round" href="{{ meetup.link }}">{{ meetup.name }}</a>
             </div>
+            {% endfor %}
           </div>
         </div>
       </div>
