Nuevo Post! + general fixes

--- a/_includes/blog/disqus.html
+++ b/_includes/blog/disqus.html
@@ -2,6 +2,6 @@
             layout="responsive"
             sandbox="allow-scripts allow-same-origin allow-modals allow-popups allow-forms"
             resizable
-            src="https://amp.ng-classroom.com/amp.html#{{ page.id }}#https://www.ng-classroom.com{{page.url}}">
+            src="https://amp.ng-classroom.com/amp.html#{{ page.id }}#https://blog.ng-classroom.com{{page.url}}">
             <div overflow></div>
 </amp-iframe>
