agregando metricas de gtm y arreglando optimize

--- a/_includes/blog/subscribe3.html
+++ b/_includes/blog/subscribe3.html
@@ -4,7 +4,7 @@
   </div>
   <div class="col col-100 col-md-90 col-lg-90">
    <div class="ion-form-subscribe">
-      <a href="http://www.ng-classroom.com/p/curso-firebase" target="_blank" class="btn btn-round btn-success">Tomar Curso.</a>
+      <a href="http://www.ng-classroom.com/p/curso-firebase" target="_blank" class="btn btn-round btn-success gtm">Tomar Curso.</a>
     </div>
   </div>
 </div>
