Adding more gtm events, links are related to content.

--- a/_includes/blog/adAngular.html
+++ b/_includes/blog/adAngular.html
@@ -4,7 +4,7 @@
   </div>
   <div class="col col-100 col-md-90 col-lg-90">
    <div class="ion-form-subscribe">
-      <a href="https://www.ng-classroom.com/p/curso-practico-angular/?product_id=441215&coupon_code=TRIAL" target="_blank" class="btn btn-round btn-success gtm">Me quiero unir.</a>
+      <a href="https://www.ng-classroom.com/p/curso-practico-angular/?coupon_code=TRIAL" target="_blank" class="btn btn-round btn-success cangular">Me quiero unir.</a>
     </div>
   </div>
 </div>
