--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -23,11 +23,11 @@
  {% endif%}
  
   <!-- Chrome, Firefox OS and Opera -->
-  <meta name="theme-color" content="#4E8EF7"> 
+  <meta name="theme-color" content="#005AA9"> 
   <!-- Windows Phone -->
-  <meta name="msapplication-navbutton-color" content="#4E8EF7">
+  <meta name="msapplication-navbutton-color" content="#005AA9">
   <!-- iOS Safari -->
-  <meta name="apple-mobile-web-app-status-bar-style" content="#4E8EF7">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#005AA9">
  
   <!-- facebook -->
   <meta property="fb:app_id" content="877264572411311" /> 
