--- a/_sass/blog/_syntax_highlighting.scss
+++ b/_sass/blog/_syntax_highlighting.scss
@@ -42,7 +42,7 @@ div.highlighter-rouge{
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
       content: "\64";
-      background-color: #4E8EF7;
+      background-color: #005AA9;
       color: white;
       left: -11px;
       top: -15px;
