--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -50,7 +50,7 @@ button.menu{
   -ms-grid-row-align: center;
   align-self: center;
   &.active{
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="-3 -6 24 24"><path fill="#4E8EF7" d="M0 12h18v-2H0v2M0 7h18V5H0v2M0 0v2h18V0H0"/></svg>');
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="-3 -6 24 24"><path fill="#005AA9" d="M0 12h18v-2H0v2M0 7h18V5H0v2M0 0v2h18V0H0"/></svg>');
   }
 }
 .margin{
