--- a/_includes/blog/subscribe3.html
+++ b/_includes/blog/subscribe3.html
@@ -1,10 +1,10 @@
 <div class="row wrap subscribe-blog">
   <div class="col col-100">
-  <p>¿ Quieres conectar tu App con Firebase ? <i>Tenemos un curso que te puede ayudar.</i></p>
+  <p>¿ Quieres hacer un App ? <i>Crea tu primera App con Angular. Suscribiendote a nuestro curso sin costo de una semana.</i></p>
   </div>
   <div class="col col-100 col-md-90 col-lg-90">
    <div class="ion-form-subscribe">
-      <a href="http://www.ng-classroom.com/p/curso-firebase" target="_blank" class="btn btn-round btn-success gtm">Tomar Curso.</a>
+      <a href="https://mailchi.mp/a1f928850dd5/j8un6a7d68" target="_blank" class="btn btn-round btn-success gtm">Tomar Curso.</a>
     </div>
   </div>
 </div>
