--- a/_includes/general/head.html
+++ b/_includes/general/head.html
@@ -116,4 +116,11 @@ h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
 {% if site.hello_bar_enabled > 0 %}
 <script src="https://my.hellobar.com/eb9a782c5cd1f0579222dd2dc202aac2a57a54af.js" type="text/javascript" charset="utf-8" async="async"></script>
 {% endif%}
+<script src="https://unpkg.com/quicklink@1.0.0/dist/quicklink.umd.js"></script>
+<script>
+  window.addEventListener('load', () => {
+    console.log('quicklink');
+    quicklink();
+  });
+  </script>
 </head>
