--- a/_includes/general/banner-course3.html
+++ b/_includes/general/banner-course3.html
@@ -2,10 +2,10 @@
   <div class="content">
     <div class="row wrap center">
       <div class="col col-100 col-md-60 col-lg-60">
-        <p>Quieres avanzar al siguiente nivel ?. Hemos creado un Curso Profesional para ti.</p>
+        <p>Quieres avanzar al siguiente nivel ? Hemos creado un Curso Profesional para ti.</p>
       </div>
       <div class="col col-100 col-md-40 col-lg-40">
-        <a href="http://www.ng-classroom.com/p/curso-profesional-ionic-2-0/?product_id=323845&coupon_code=TRIAL" target="_blank" class="btn btn-primary btn-round btn-course">Ver Curso.</a>
+        <a href="https://bootcampwithus.usefedora.com/p/curso-practico-angular" target="_blank" class="btn btn-primary btn-round btn-course">Ver Curso</a>
       </div>
     </div>
   </div>
