fixing erratum, [Post] Aws appsync offline

--- a/_layouts/onboarding.html
+++ b/_layouts/onboarding.html
@@ -14,7 +14,7 @@ layout: default
       </p>
       <amp-img src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/onboarding%2Fef36a253-75df-475f-94cc-e8793877d1ad.png?alt=media&token=62695518-f223-4ef4-a284-124313884de3" alt="welcome" width="500" height="396" layout="fixed"></amp-img>
       <h2>Comencemos...</h2> 
-      <p>Has ingresado a esta comunidad por que te apasiona hacer Apps con Ionic y no te quieres perder todo el increible contenido que nuestra comunidad comparte semana tras semana, pero que tal si pruebas un nuevo tutorial el dia de hoy?
+      <p>Has ingresado a esta comunidad por que te apasiona hacer Apps con JavaScript y no te quieres perder todo el increible contenido que nuestra comunidad comparte semana tras semana, pero que tal si pruebas un nuevo tutorial el dia de hoy?
       </p>
       <br><br>
       <div class="more">
@@ -43,38 +43,15 @@ layout: default
               <amp-img src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/onboarding%2F530a242f-74c5-4c96-842f-e7c979d83d33.png?alt=media&token=37635c9c-08a7-4e43-abce-173f0a3d4b82" alt="youtube logo" width="140" height="151" layout="responsive"></amp-img>
             </div>
             <div class="col col-100 col-md-80 col-lg-80 text">
-              <h2>ion-hangouts</h2>
-              <div class="info"><p>Cada 2 semanas invitamos a alguien de la comunidad para hablar de un tema interesante sobre la elaboración de Apps.</p></div>
+              <h2>Hangouts</h2>
+              <div class="info"><p>Cada 2 semanas invitamos a alguien de la comunidad para hablar de un tema interesante sobre la elaboración de Apps con JavaScript.</p></div>
               <div class="more">
                 <a class="btn btn-primary btn-round" href="https://www.youtube.com/channel/UCxs-DaSRmp8k23n79WjXndw?sub_confirmation=1" target="_blank">Ver los Anteriores.</a>
               </div>
             </div>
           </div>
       </div>
-      
-      <!-- -->
-      <div class="author">
-          <div class="row wrap top">
-            <div class="col col-100 col-md-20 col-lg-20">
-              <amp-img src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/onboarding%2Fc4933b46-c651-4a3c-8593-5e2a8a717c6b.jpeg?alt=media&token=3092af38-2708-4e35-94d3-1dcc862a65d3" alt="crosapps logo" width="140" height="151" layout="responsive"></amp-img>
-            </div>
-            <div class="col col-100 col-md-80 col-lg-80 text">
-              <h2>Conectate en tu area.</h2>
-              <div class="info"><p>Algunos de nuestros miembros han creado comunidades locales donde te puedes unir y encontrarte con tus vecinos y compañeros en tu ciudad.</p></div>
-              <div class="more">
-                <a class="btn btn-primary btn-round" href="https://www.ion-book.com/meetups/" target="_blank">Busca la tuya aquí.</a>
-              </div>
-            </div>
-          </div>
-      </div>
-
-      <h2>Una ultima cosa...</h2> 
-      <p>Ayudanos a que mas personas aprendan a programar y a crear sus propias Apps.
-      </p>
       <br><br>
-      <div class="more">
-                <a class="btn btn-primary btn-round" href="http://spread.ion-book.com/" target="_blank">Quiero Ayudar!</a>
-      </div>
     </div>
     <div class="col col-100 col-md-100 col-lg-20">
       <div class="row wrap baseline">
