new colors + links

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,5 @@
-$primary-color: #005AA9;
-$secondary-color: #2557AA;
+$primary-color: #bac1c7;
+$secondary-color: #666;
 $success-color: #57aa25;
 $title-color: #333;
 $box-background-color: #6E6891;
